--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,12 +34,27 @@ unused-qualifications = "warn"
 unused-tuple-struct-fields = "warn"
 
 [lints.clippy]
-cargo = "warn"
-cargo_common_metadata = "allow" # REMOVE ON LIB!!
-multiple_crate_versions = "allow"
-nursery = "warn"
-pedantic = "warn"
-restriction = "warn"
+cargo = { level = "warn", priority = -1 }
+nursery = { level = "warn", priority = -1 }
+pedantic = { level = "warn", priority = -1 }
+restriction = { level = "warn", priority = -1 }
+absolute-paths = "allow"
+blanket-clippy-restriction-lints = "allow"
+cargo-common-metadata = "allow"
+implicit-return = "allow"
+missing-docs-in-private-items = "allow"
+multiple-crate-versions = "allow"
+print-stderr = "allow"
+print-stdout = "allow"
+question-mark-used = "allow"
+single-call-fn = "allow"
 
 [dependencies]
-
+anyhow = "1.0"
+dotenvy = "0.15"
+futures-util = { version = "0.3", default-features = false }
+tokio = { version = "1.36", features = ["rt-multi-thread", "macros"] }
+tracing = { version = "0.1", default-features = false, features = ["std"] }
+tracing-subscriber = "0.3"
+twilight-gateway = { version = "0.15", default-features = false, features = ["simd-json", "rustls-webpki-roots", "twilight-http", "zlib-simd"] }
+twilight-http = { version = "0.15", default-features = false, features = ["decompression", "simd-json", "rustls-webpki-roots", "trust-dns"] }
