send response to create_verification_message command

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,10 +42,12 @@ blanket-clippy-restriction-lints = "allow"
 cargo-common-metadata = "allow"
 implicit-return = "allow"
 missing-docs-in-private-items = "allow"
+missing-trait-methods = "allow"
 module-name-repetitions = "allow"
 multiple-crate-versions = "allow"
 multiple-inherent-impl = "allow"
 non-ascii-literal = "allow"
+partial_pub_fields = "allow"
 print-stderr = "allow"
 print-stdout = "allow"
 question-mark-used = "allow"
@@ -53,6 +55,7 @@ self-named-module-files = "allow"
 single-call-fn = "allow"
 single-char-lifetime-names = "allow"
 std-instead-of-alloc = "allow"
+std-instead-of-core = "allow"
 wildcard-enum-match-arm = "allow"
 
 [dependencies]
