--- a/Cargo.toml
+++ b/Cargo.toml
@@ -65,8 +65,8 @@ futures-util = { version = "0.3", default-features = false }
 google-sheets4 = "5.0"
 tokio = { version = "1.36", features = ["rt-multi-thread", "macros"] }
 tracing = { version = "0.1", default-features = false, features = ["std"] }
-tracing-subscriber = "0.3"
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 twilight-gateway = { version = "0.15", default-features = false, features = ["simd-json", "rustls-webpki-roots", "twilight-http", "zlib-simd"] }
 twilight-http = { version = "0.15", default-features = false, features = ["decompression", "simd-json", "rustls-webpki-roots", "trust-dns"] }
 twilight-model = "0.15"
-twilight-util = { version = "0.15", features = ["builder"] }
+twilight-util = { version = "0.15", features = ["builder", "link"] }
